--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in with Google Example</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
 </head>
 
 <body>
-
-    <!-- Transparent white screen overlay -->
+   
     <div id="overlay">
         <button id="signInButton" onclick="signInWithGoogle()">Sign in with Google</button>
     </div>
-
-    <script src="script.js"></script>
 
     <!-- Your HTML content -->
     <div id="content" style="display: none;">
         <h1>Hello World</h1>
     </div>
+    <script type="text/javascript" src="script.js"></script>
 
+    
 </body>
 
 </html>
